@@ -1,8 +1,7 @@
 package com.yoneodoo.api.service;
 
-import com.yoneodoo.api.entity.DisplayStatus;
-import com.yoneodoo.api.entity.Recipe;
-import com.yoneodoo.api.repository.RecipeRepository;
+import com.yoneodoo.api.entity.IngredientMapping;
+import com.yoneodoo.api.repository.IngredientMappingRepository;
 import com.yoneodoo.api.util.KoreanParserUtil;
 import jakarta.annotation.PostConstruct;
 import lombok.Getter;
@@ -10,21 +9,22 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
- * "재료 자동완성/검색"을 위한 서비스입니다.
+ * 재료 자동완성·검색과 raw→master 이름 변환을 담당하는 서비스입니다.
  * <p>
- * <b>핵심 아이디어(DB vs 메모리)</b><br>
- * 매 검색마다 모든 레시피의 jsonb 재료를 훑으면 DB 부하가 큽니다.
- * 그래서 서버 기동 시점과 매핑 변경 직후 등에 <b>한 번에 모아서 메모리 리스트({@link #ingredientCache})</b>에 올려 두고,
- * 실제 검색은 이 메모리에서 빠르게 필터링합니다.
+ * <b>캐시 데이터 원천</b><br>
+ * {@code ingredient_mapping} 테이블의 {@code master_name}만 추출해 중복 제거 후 인메모리 캐시에 올립니다.
+ * 따라서 검색 자동완성은 마스터(표준) 재료명 기준으로 동작합니다.
  * <p>
- * <b>데이터 원천</b><br>
- * {@link RecipeRepository#findAll()}로 모든 레시피를 읽은 뒤, 각 레시피의 {@code ingredients} JSON 배열에서
- * {@code name}만 모아 중복을 제거한 집합을 만듭니다. 즉 "DB에 있는 모든 레시피"가 캐시의 소스입니다.
+ * <b>raw→master 변환</b><br>
+ * {@link #toMaster(String)}으로 레시피 JSON의 raw 재료명을 master_name으로 변환할 수 있습니다.
+ * 매핑이 없는 raw_name은 원본 그대로 반환합니다.
  * <p>
  * <b>한글 검색 보조</b><br>
  * {@link KoreanParserUtil}로 초성·자모 문자열을 미리 만들어 두고,
@@ -34,56 +34,64 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class IngredientSearchService {
 
-    /** 레시피 전체를 읽어와 캐시를 재구성할 때 사용하는 저장소. */
-    private final RecipeRepository recipeRepository;
+    /** ingredient_mapping 테이블에 접근해 master_name 목록과 raw→master 맵을 구성합니다. */
+    private final IngredientMappingRepository ingredientMappingRepository;
 
     /**
      * DB를 직접 두드리지 않고 검색에 사용하는 인메모리 목록입니다.
-     * 원소 타입 {@link IngredientCacheDto}에는 표시용 이름과 초성/자모 필드가 함께 들어 있습니다.
+     * 원소 타입 {@link IngredientCacheDto}에는 표시용 master_name과 초성/자모 필드가 함께 들어 있습니다.
      */
     private final List<IngredientCacheDto> ingredientCache = new ArrayList<>();
 
     /**
+     * raw_name → master_name 변환 맵(인메모리).
+     * {@link #toMaster(String)} 호출 시 O(1)로 조회합니다.
+     */
+    private Map<String, String> rawToMasterMap = new HashMap<>();
+
+    /**
      * 스프링 빈이 처음 만들어진 직후(서버 기동 직후) 자동으로 한 번 실행됩니다.
      * <p>
-     * 하는 일: DB의 모든 레시피 → 재료 이름 수집·정규화 → 캐시 리스트 재작성.
+     * 하는 일:<br>
+     * ① {@code ingredient_mapping} 전체 행을 읽어 raw→master 맵을 구성합니다.<br>
+     * ② master_name을 중복 제거(Set)한 뒤 초성/자모 인덱스와 함께 캐시에 적재합니다.<br>
      * <p>
-     * 또한 어드민에서 재료 매핑을 저장/삭제한 뒤에도 {@link #initCache()}를 다시 호출해
-     * "DB와 캐시의 재료 목록"이 어긋나지 않게 맞춥니다.
+     * 어드민에서 재료 매핑을 저장/삭제한 뒤에도 이 메서드를 다시 호출해 캐시를 갱신합니다.
      */
     @PostConstruct
     public void initCache() {
-        // ① 사용자 노출 이중 안전장치: status="SUCCESS" + displayStatus=ACTIVE 인 레시피만 캐시 소스로 사용.
-        //    - 크롤링 실패(자막 없음 등) 행의 재료는 자동완성에서 제외
-        //    - 어드민이 HIDDEN 으로 토글한 레시피의 재료도 자동완성에서 제외
-        List<Recipe> allRecipes = recipeRepository.findByStatusAndDisplayStatus(
-                Recipe.STATUS_SUCCESS, DisplayStatus.ACTIVE);
+        // ① ingredient_mapping 테이블 전체 로드
+        List<IngredientMapping> mappings = ingredientMappingRepository.findAll();
 
-        // ② 각 레시피의 JSON 재료에서 name만 뽑아, 공백 제거 후 중복 없는 집합(Set)으로 만듭니다.
-        Set<String> uniqueNames = allRecipes.stream()
-                .filter(recipe -> recipe.getIngredients() != null)
-                .flatMap(recipe -> recipe.getIngredients().stream())
-                .map(ingredient -> ingredient.getName())
-                .filter(name -> name != null && !name.trim().isEmpty())
-                .map(name -> name.replace(" ", ""))
+        // ② raw→master 변환 맵 재구성 (raw_name이 유니크이므로 충돌 없음)
+        rawToMasterMap = mappings.stream()
+                .collect(Collectors.toMap(
+                        IngredientMapping::getRawName,
+                        IngredientMapping::getMasterName,
+                        (a, b) -> a  // 만일을 위한 중복 키 처리(첫 번째 우선)
+                ));
+
+        // ③ master_name만 중복 제거해 집합으로 만듭니다.
+        Set<String> masterNames = mappings.stream()
+                .map(IngredientMapping::getMasterName)
+                .filter(name -> name != null && !name.isBlank())
                 .collect(Collectors.toSet());
 
-        // ③ 이전 캐시 비우기(완전 재빌드).
+        // ④ 이전 캐시 비우기(완전 재빌드).
         ingredientCache.clear();
 
-        // ④ 집합의 각 재료명에 대해 초성/자모를 계산해 DTO로 캐시에 적재합니다.
+        // ⑤ 각 master_name에 대해 초성/자모를 계산해 DTO로 캐시에 적재합니다.
         long idCounter = 1L;
-        for (String name : uniqueNames) {
+        for (String name : masterNames) {
             String chosung = KoreanParserUtil.getChosung(name);
             String jamo = KoreanParserUtil.getJamo(name);
-
             ingredientCache.add(new IngredientCacheDto(idCounter++, name, chosung, jamo));
         }
-        System.out.println("✅ 요리 재료 인메모리 캐싱 완료! (진짜 데이터 총 " + ingredientCache.size() + "개)");
+        System.out.println("✅ 재료 마스터명 캐시 완료! (master 종류 " + ingredientCache.size() + "개, raw 매핑 " + rawToMasterMap.size() + "건)");
     }
 
     /**
-     * 사용자가 입력한 키워드로 재료 후보를 검색합니다.
+     * 사용자가 입력한 키워드로 마스터 재료 후보를 검색합니다.
      * <p>
      * 동작 요약:<br>
      * · 키워드가 비어 있으면 빈 목록.<br>
@@ -92,7 +100,7 @@ public class IngredientSearchService {
      * · "검색어로 시작하는 항목"을 앞쪽으로 정렬한 뒤 최대 20건만 잘라 반환합니다.
      *
      * @param keyword 사용자 입력 문자열(앱의 검색창 값)
-     * @return 자동완성 후보 목록(최대 20개)
+     * @return 자동완성 후보 목록(최대 20개, master_name 기준)
      */
     public List<IngredientCacheDto> search(String keyword) {
         if (keyword == null || keyword.trim().isEmpty()) {
@@ -122,10 +130,24 @@ public class IngredientSearchService {
     }
 
     /**
+     * raw_name을 master_name으로 변환합니다.
+     * <p>
+     * {@code ingredient_mapping}에 등록된 raw_name이면 해당 master_name을 반환하고,
+     * 등록되지 않은 raw_name은 원본 그대로 반환합니다.
+     *
+     * @param rawName 레시피 JSON에 저장된 원본 재료명
+     * @return 대응하는 master_name, 없으면 rawName 그대로
+     */
+    public String toMaster(String rawName) {
+        if (rawName == null) return null;
+        return rawToMasterMap.getOrDefault(rawName, rawName);
+    }
+
+    /**
      * 메모리 캐시에 들어가는 "재료 한 줄" 표현입니다.
      * <p>
      * {@code id}: 캐시 내부용 임시 식별자(DB PK와 무관).<br>
-     * {@code name}: 사용자에게 보여 줄 재료명(공백 제거된 형태).<br>
+     * {@code name}: 사용자에게 보여 줄 master_name.<br>
      * {@code chosung}: 초성만 이어 붙인 문자열(초성 검색용).<br>
      * {@code jamo}: 완전 분해한 자모열(완성형 검색용).
      */
